fix: fix row gap

--- a/src/common/components/header/Header.scss
+++ b/src/common/components/header/Header.scss
@@ -55,7 +55,7 @@
 
 @media(max-width:650px) {
   .nav {
-    row-gap: 15px;
+    row-gap: 25px;
     grid-template-columns: repeat(2, 1fr);
     grid-template-areas: 'title buttons'
                           'nav nav';
